<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.topwise.topos.appstore.view.activity.StoreOptionActivity"
    android:orientation="vertical">
    <include layout="@layout/as_actionbar_layout" />
    <include layout="@layout/line2"/>
    <TextView
        android:id="@+id/option_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="16sp"
        android:textColor="#000"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:background="#aaeee3ee">
    <EditText
        android:id="@+id/option_commit"
        android:hint="@string/topwise_board_option_description_hint"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aaeee3ee"
        android:textColorHint="#33333333"
        android:textColor="#000"/>
        <TextView
            android:id="@+id/option_commit_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/100"
            android:textColor="#000"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000"
         android:textSize="16sp"
         android:text="@string/topwise_board_option_description1"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/option_commit_contact"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="30dp"
            android:background="#aaeee3ee"
            android:textColorHint="#33333333"
            android:hint="@string/topwise_board_option_description_hint1"
            android:textColor="#000"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <Button
            android:id="@+id/button_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#33a2ff"
            android:text="@string/topwise_board_option_button_commit"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
