<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.topwise.topos.appstore.view.fragment.BoardFragment"
    android:background="#ffffff">
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:orientation="vertical">-->
        <!--<ImageView-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:src="@drawable/as_ic_launcher"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/topwise_board_login"/>-->
        <!---->
    <!--</LinearLayout>-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/topwise_line_color"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:orientation="horizontal">
           <RelativeLayout
               android:id="@+id/board_download"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_centerVertical="true"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/board_download_icon"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginLeft="55dp"
                   android:textColor="@color/topwise_text_color"
                   android:textSize="18sp"
                   android:text="@string/topwise_board_page_download"/>
               <TextView
                   android:id="@+id/download_task"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/topwise_text_color_smalltitle"
                   android:layout_marginTop="45dp"
                   android:layout_marginLeft="55dp"
                   android:layout_marginBottom="20dp"
                   />
           </RelativeLayout>
           <View
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="5dp"
               android:background="@color/topwise_line_color"/>
           <RelativeLayout
               android:id="@+id/board_rubish"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_centerVertical="true"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/board_rubish_icon"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginLeft="55dp"
                   android:textColor="@color/topwise_text_color"
                   android:textSize="18sp"
                   android:text="@string/topwise_board_page_rubish"/>
               <TextView
                   android:id="@+id/board_download_package_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/topwise_text_color_smalltitle"
                   android:layout_marginTop="45dp"
                   android:layout_marginLeft="55dp"
                   android:layout_marginBottom="20dp"
                   android:text="@string/topwise_board_page_clear"/>
           </RelativeLayout>
       </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/topwise_line_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <RelativeLayout
                android:id="@+id/board_app_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/board_app_update_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="55dp"
                    android:textColor="@color/topwise_text_color"
                    android:textSize="18sp"
                    android:text="@string/topwise_board_page_update"/>
                <TextView
                    android:id="@+id/download_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/topwise_text_color_smalltitle"
                    android:layout_marginTop="45dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/topwise_board_login"/>
            </RelativeLayout>
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/topwise_line_color"/>
            <RelativeLayout
                android:id="@+id/board_app_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/board_app_remove_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="55dp"
                    android:textColor="@color/topwise_text_color"
                    android:textSize="18sp"
                    android:text="@string/topwise_board_page_remove"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/topwise_text_color_smalltitle"
                    android:text="@string/topwise_board_page_installed"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/topwise_line_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/topwise_aisle_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/topwise_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/board_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/topwise_text_color"
                android:text="@string/topwise_board_settings"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/store_common_icon"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/topwise_line_color"/>

        <RelativeLayout
            android:id="@+id/theme_skins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="#000"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/topwise_text_color"
                android:textSize="18sp"
                android:text="@string/topwise_board_skins"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/store_common_icon"/>
        </RelativeLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="#22000000"/>-->

        <RelativeLayout
            android:id="@+id/shopping_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/topwise_text_color"
                android:textSize="18sp"
                android:text="@string/topwise_board_option"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/store_common_icon"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/topwise_line_color"/>

        <RelativeLayout
            android:id="@+id/board_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/topwise_text_color"
            android:textSize="18sp"
            android:text="@string/topwise_board_about"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/store_common_icon"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/topwise_line_color"/>

    </LinearLayout>
</LinearLayout>
